configs/envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_https_zt
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443

    filter_chains:
    - transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          require_client_certificate: true
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: "/certs/server.crt"
              private_key:
                filename: "/certs/server.key"
            validation_context:
              trusted_ca:
                filename: "/ca/ca.crt"

      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http

          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster_backend_api

          http_filters:
          # 1. Filtro Lua opzionale per ispezione/logica L7 HTTP
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              source_codes:
                mongo_inspector.lua:
                  filename: "/etc/envoy/mongo_inspector.lua"

          # 2. Filtro di autorizzazione esterna verso OPA
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              grpc_service:
                envoy_grpc:
                  cluster_name: "cluster_opa"
                timeout: 0.5s
              include_peer_certificate: true
              metadata_context_namespaces:
              - "envoy.filters.http.lua"

          # 3. Router finale verso API backend
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: cluster_backend_api
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cluster_backend_api
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api_backend
                port_value: 3000

  - name: cluster_opa
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}

    load_assignment:
      cluster_name: cluster_opa
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: pdp_engine
                port_value: 9191
